--- a/aboly.html
+++ b/aboly.html
@@ -1676,12 +1676,12 @@ img.characterimg {
 <li><p> 读书人，知识分子。官职并非士的必要条件，但按儒家传统观念，是应当积极从政的。<a href="#19.13" class="lyref">19.13</a> <span class="lyq">学而优则仕</span>，主语很自然地就是士。向学之士与在位之<a href="#qingdafushi">士</a>的区别，类似于双重含义的<a href="#junzi">君子</a>。古代不同职业的地位及影响力差别很大，现代的选择面就宽得多了。</p></li>
 <li>
 <p> 理想化的士，侧重于有志气、有骨气。<span class="lyseealso"><span>【参】</span><span>《大戴礼记·哀公问五义》中，士的位次高于庸人而次于<a href="#junzi">君子</a>，并借孔子之口说：<span class="lyq">所谓士者，虽不能尽道术，必有<a href="#suoyou">所由</a>焉；虽不能尽善尽美，必有所处焉。是故知不务多，而务<a href="#shen3">审</a>其所知；行不务多，而务审其所由；言不务多，而务审其所谓。</span></span></span></p>
-<p>这两个意义在《论语》中互有融合，就像现代汉语的男人、英语的man，既可以不带感情色彩地指男性成员，也可以根据上下文环境指真男儿、好汉子。<span class="lyexample"><span>【例】</span><span><a href="#8.7" class="lyref">8.7</a> <span class="lyq">士不可以不弘毅。</span><a href="#14.2" class="lyref">14.2</a> <span class="lyq">士而怀居，不足以为士矣。</span>1962年Bob Dylan的民歌金曲<em>Blowin' in the Wind</em>开头是：<span class="lyqe">How many roads must a man walk down, before you call him a man?</span></span></span></p>
+<p>这两个意义在《论语》中互有融合，就像现代汉语的男人、英语的man，既可以不带感情色彩地指男性成员，也可以根据上下文环境指真男儿、好汉子。<span class="lyexample"><span>【例】</span><span><a href="#8.7" class="lyref">8.7</a> <span class="lyq">士不可以不弘毅。</span><a href="#14.2" class="lyref">14.2</a> <span class="lyq">士而怀居，不足以为士矣。</span>Bob Dylan 1962年创作的民歌<em>Blowin' in the Wind</em>开头即问：<span class="lyqe">How many roads must a man walk down, before you call him a man?</span></span></span></p>
 </li>
 </ul>
 <p>此外，士还是最低级别的<a href="#qingdafushi">贵族阶层</a>，也泛指有官职者。到了战国，养士之风盛行，则是偏重于实用的一技之长。</p>
 </li>
-<li><p><span class="lyterm">议</span>：讨论，商量，这里偏重于交流求道的心得体会。<span class="lyseealso"><span>【参】</span><span><a href="#15.40" class="lyref">15.40</a> <span class="lyq">道不同，不相为谋。</span>1929年，史学家陈寅恪（1890—1969）在王国维纪念碑铭中写道：<span class="lyq">士之读书治学，盖将以脱心志于俗谛之<a href="#zhigu">桎梏</a>，真理因得以发扬。</span>（谛：道理。俗谛：即庸俗鄙陋之见。）大概所有走出校园、进入社会的人，都能切身感受“俗谛”的无所不在，可见专心求道的可贵。</span></span></p></li>
+<li><p><span class="lyterm">议</span>：讨论，商量，这里偏重于交流求道的心得体会，实也泛指共事、打交道。<span class="lyseealso"><span>【参】</span><span><a href="#15.40" class="lyref">15.40</a> <span class="lyq">道不同，不相为谋。</span>1929年，史学家陈寅恪（1890—1969）在王国维纪念碑铭中写道：<span class="lyq">士之读书治学，盖将以脱心志于俗谛之<a href="#zhigu">桎梏</a>，真理因得以发扬。</span>（谛：道理。俗谛：即庸陋之见。）大概所有走出校园、进入社会的人，都能切身感受“俗谛”的无所不在，可见专心求道的可贵。</span></span></p></li>
 </ul></div>
 </div>
 <a id="4.10"></a><div class="lyblob">
@@ -1760,11 +1760,13 @@ img.characterimg {
 <a id="4.16"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#4.16">4.16</a></div>
 <div class="lybloboriginaltext"><p>子曰：“君子喻于义，小人喻于利。”</p></div>
-<div class="lyblobannotation"><ul class="lyblobitemize"><li>
-<p><span class="lyterm">喻</span>：明白（道理），了解（情况）。<span class="lyexample"><span>【例】</span><span>成语“不言而喻”、“家喻户晓”。</span></span></p>
-<p>其本义为告知、开导（人），前面相当于它的被动用法。<a id="xiao3"></a>“晓”也有这两种意思。<span class="lyexample"><span>【例】</span><span>成语“不可理喻”、“晓以利害”。</span></span></p>
-<p>这句话不是说君子并不求利，而是先后轻重的次序与小人相反。<span class="lyseealso"><span>【参】</span><span><a href="#4.5" class="lyref">4.5</a> </span></span></p>
-</li></ul></div>
+<div class="lyblobannotation">
+<ul class="lyblobitemize"><li>
+<p><span class="lyterm">喻</span>：明白，懂得，了解。<span class="lyexample"><span>【例】</span><span>《旧五代史·王朴传》：<span class="lyq">居常计事者多不喻其旨。</span>成语有“不言而喻”、“家喻户晓”。</span></span>介宾结构“于义”用作不及物动词的补语，介词<span class="lyterm">于</span>表示在……方面，从……中。<span class="lyexample"><span>【例】</span><span><a href="#1.14" class="lyref">1.14</a> <span class="lyq">敏于事而慎于言。</span></span></span></p>
+<p>“喻”的本义为告知、开导（人）。“喻于”也可当成本义的被动用法，“跟他这样说才说得通”。<a id="xiao3"></a>“晓”也有这两种意思。<span class="lyexample"><span>【例】</span><span>成语“喻之以理”、“不可理喻”、“晓以利害”。</span></span></p>
+</li></ul>
+<p>这句话不是说君子并不求利，而是先后轻重的次序与小人相反。<span class="lyseealso"><span>【参】</span><span><a href="#4.5" class="lyref">4.5</a> 。清代王植《四书参注》：<span class="lyq">义、利严界，为学者最要关头。夫君子、小人其学业之就将、心力之勤厉、早作夜思、经营尽瘁，无一不同。然君子之为学也，究心圣贤之道，致力伦常之间，事事从己身起见。故知则真知，非徒博物；行则力行，非有近名。……遇有国是所关、民命所系者，不惮廷争力谏，而一身之利害不问；即至死生祸福之交，不难捐躯<a href="#zhi4">致</a>命，以成一是，乃其喻义之究竟。小人之矻矻孜孜，何尝让于君子？然其所计者，辞章之善否，声誉之有无。忍目前之苦，正以图异日之甘；矫违心之节，正以冀非道之遇。……倘遇厉害得丧之顷，心沮气丧，患得患失，虽至生平尽丧，名节荡然，而前此谈道立名之身，<a href="#jin1b">矜</a>己笑人之口，亦瓦裂尘飞而不堪回首，正其喻利之究竟。</span>（交：关头。顷：时刻。矻矻（<span class="lypinyin">kū</span>）孜孜：又作孜孜矻矻，勤勉不懈的样子。矻矻：石头坚硬难凿。）</span></span></p>
+</div>
 </div>
 <a id="4.17"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#4.17">4.17</a></div>
@@ -2791,7 +2793,7 @@ img.characterimg {
 <p><a id="chenguo"></a>陈国，春秋时<a href="#shun">舜帝</a>后代的封国，都城宛丘（在今河南省周口市淮阳县，相传<a href="#sanhuang">三皇</a>旧都均在周口）。</p>
 </li>
 <li>
-<p><span class="lyterm">昭公</span>和后面的<span class="lyterm">君</span>，都是指鲁昭公。只从少年时代算起，昭公是孔子亲历的首位鲁君，孔子在陈时昭公已经去世，他的回答是<a href="#weizunzhehui">为尊者讳</a>。 </p>
+<p><span class="lyterm">昭公</span>和后面的<span class="lyterm">君</span>，都是指鲁昭公。只从少年时代算起，昭公是孔子亲历的首位鲁君，孔子在陈时昭公已经去世，他的回答应是<a href="#weizunzhehui">为尊者讳</a>。 </p>
 <p><a id="zhaogong"></a>鲁昭公（约前560年—前510年，前542年—前517年在位），名裯（<span class="lypinyin">chóu</span>），鲁国第24任国君，<a href="#xianggong">鲁襄公</a>之子，<a href="#dinggong">鲁定公</a>之兄。在他任内国政始终由<a href="#sanhuan">三桓</a>把持，加上<a href="#sifengongshi">四分公室</a>、<a href="#jianyongbayi">僭用八佾</a>等逆行，前517年（《左传·昭公二十五年》）他终于下决心讨伐<a href="#jishi">季氏</a>（当时是<a href="#jipingzi">季平子</a>在位），反遭三桓联合一击而溃，流亡齐晋7年，复国无门，郁郁而终。</p>
 <p><a id="shimo"></a><span class="lyseealso"><span>【参】</span><span>《左传·昭公三十二年》载，昭公去世后，晋大夫赵简子询问大夫史墨：<span class="lyq">“季氏出其君，而民服焉，诸侯与之；君死于外，而莫之或罪也？”</span>史墨答：<span class="lyq">“……王有公，诸侯有卿，皆有贰也。天生季氏，以贰鲁侯，为日久矣，民之服焉，不亦宜乎？鲁君世从其失，季氏世修其勤，民忘君矣。虽死于外，其谁<a href="#jin1a">矜</a>之？<a href="#sheji">社稷</a>无常奉，君臣无常位，自古以然。……〔<a href="#jiyou">季友</a>〕继而有大功于鲁，受费以为上卿。至于<a href="#jiwenzi">文子</a>、<a href="#jiwuzi">武子</a>，世增其业，不废旧绩。鲁文公<a href="#hong1">薨</a>，而<a href="#dongmensui">东门遂</a>杀适立庶，鲁君于是乎失国，政在季氏，于此君也，四公矣。民不知君，何以得国？是以为君慎器与<a href="#zhengming">名</a>，不可以假人。”</span>（贰：副，既有佐助又有备用之意。<a id="zhongqi"></a>器：传国重器，即钟鼎玉器之类的国宝，比喻政权。假：借（给）。）</span></span>36年后，齐国又有 <a href="#14.21" class="lyref">14.21</a> <span class="lyq">陈成子弑简公</span>。</p>
 </li>
@@ -2799,7 +2801,7 @@ img.characterimg {
 <li><p><a id="dang3b"></a><span class="lyterm"><a href="#dang3a">党</a></span>：动词，结党（营私），拉帮结派，这里指偏私，袒护。其名词义是因为共同的利益诉求而结成的集团。<span class="lyexample"><span>【例】</span><span><a href="#15.22" class="lyref">15.22</a> <span class="lyq">群而不党。</span>成语“党同伐异”。</span></span><span class="lyseealso"><span>【参】</span><span>《国语·晋语五》载，赵宣子推荐韩献子为司马，在河曲之役中，赵宣子的属下驾车扰乱部队行列，被韩献子依律处死。<span class="lyq">宣子召而礼之曰：“吾闻事君者比而不党。夫周以举义，比也；举以其私，党也。夫军事无犯，犯而不隐，义也。吾言女于君，惧女不能也。举而不能，党孰大焉？事君而党，吾何以从政？吾故以是观女。女勉之！”</span>（周：忠信。<a href="#bi3">比</a>：指正当的亲近。）</span></span></p></li>
 <li><p><span class="lyterm">取于吴，为同姓，谓之“吴孟子”</span>。<span class="lyterm">取</span>：通“娶”。鲁<a href="#taibo">吴</a>之君同为姬<a href="#xingshi">姓</a>，鲁昭公夫人是吴宗室长女，本应按姓称为“吴姬”或“孟姬”。周制同姓不可通婚，昭公为了混淆视听，按<a href="#bozhongshuji">排行</a>含糊地称其为“孟<a href="#zi3a">子</a>”，好像是来自子姓的<a href="#songguo">宋国</a>，连“吴”都尽量隐去。前483年吴孟子去世，孔子也参加了吊唁，事见《左传·哀公十二年》。<span class="lyexample"><span>【例】</span><span>《左传》开篇第一句话（隐公元年）：<span class="lyq">惠公<a href="#yuan2">元</a>妃孟子</span>，即隐公之父惠公的正妻，才是宋王室长女。</span></span><span class="lyseealso"><span>【参】</span><span>《礼记·坊记》：<span class="lyq">子云：“取妻不取同姓，以厚别也。故买妾不知其姓，则卜之，以此坊民。《鲁春秋》犹去夫人之姓曰‘吴’，其死曰‘孟子卒’。”</span>（厚别：增强血缘差异。坊：通“防”，堤防，指规范人德行的礼。）《礼记·杂记下》：<span class="lyq">夫人之不命于天子，自鲁昭公始也。</span>（命：帝王的诰令，指诸侯向周天子报告婚娶的情况后，天子为诸侯夫人赐封。）</span></span></p></li>
 </ul>
-<p><span class="lyseealso"><span>【参】</span><span>《圣经·旧约·箴言》9:8：<span class="lyqe">Reprove not a scorner, lest he hate thee: rebuke a wise man, and he will love thee.</span>（<span class="lyq">不要责备亵慢人，恐怕他恨你。要责备智慧人，他必爱你。</span>）</span></span></p>
+<p><span class="lyseealso"><span>【参】</span><span><a href="#7.37" class="lyref">7.37</a> <span class="lyq">君子坦荡荡。</span><a href="#7.24" class="lyref">7.24</a> <span class="lyq">吾无隐乎尔！吾无行而不与二三子者。</span>亦见 <a href="#13.19" class="lyref">13.19</a>  所引<a href="#shendu">慎独</a>精神。《圣经·旧约·箴言》9:8：<span class="lyqe">Reprove not a scorner, lest he hate thee: rebuke a wise man, and he will love thee.</span>（<span class="lyq">不要责备亵慢人，恐怕他恨你。要责备智慧人，他必爱你。</span>）</span></span></p>
 </div>
 </div>
 <a id="7.32"></a><div class="lyblob">
@@ -4535,7 +4537,7 @@ img.characterimg {
 <a id="13.19"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#13.19">13.19</a></div>
 <div class="lybloboriginaltext"><p><a href="#fanxu">樊迟</a>问仁，子曰：“居处恭，执事敬，与人忠。虽之夷狄，不可弃也。”</p></div>
-<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm">居处</span>（<span class="lypinyin">chǔ</span>）：日常言行。又指日常生活。<span class="lyexample"><span>【例】</span><span><a href="#17.21" class="lyref">17.21</a> <span class="lyq">食旨不甘，闻乐不乐，居处不安。</span></span></span><span class="lyseealso"><span>【参】</span><span>《中庸》：<span class="lyq">道也者，不可<a href="#xuyu">须臾</a>离也；可离，非道也。君子戒慎乎其所不睹，恐惧乎其所不闻，莫<a href="#xian4">见</a>乎隐，莫显乎微。故君子慎其独也。</span>（“慎独”是儒家的传统精神。独：既可理解为闲居独处之时，也可理解为隐秘自知之事。）</span></span></p></li></ul></div>
+<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm">居处</span>（<span class="lypinyin">chǔ</span>）：日常言行。又指日常生活。<span class="lyexample"><span>【例】</span><span><a href="#17.21" class="lyref">17.21</a> <span class="lyq">食旨不甘，闻乐不乐，居处不安。</span></span></span><a id="shendu"></a><span class="lyseealso"><span>【参】</span><span>《中庸》：<span class="lyq">道也者，不可<a href="#xuyu">须臾</a>离也；可离，非道也。君子戒慎乎其所不睹，恐惧乎其所不闻，莫<a href="#xian4">见</a>乎隐，莫显乎微。故君子慎其独也。</span>（“慎独”是儒家的传统精神。独：既可理解为闲居独处之时，也可理解为隐秘自知之事。）</span></span></p></li></ul></div>
 </div>
 <a id="13.20"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#13.20">13.20</a></div>
@@ -6063,7 +6065,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#18.5">18.5</a></div>
 <div class="lybloboriginaltext"><p>楚狂接舆歌而过孔子曰：“凤兮，凤兮！何德之衰？往者不可谏，来者犹可追。已而，已而，今之从政者殆而！”孔子下，欲与之言。趋而辟之，不得与之言。</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><a id="jieyu"></a><span class="lyterm">楚狂接舆</span>：楚国一位佯狂避世的隐士，因为不知道他的真名，所以根据他走近过孔子的车乘这件事，给他取了<span class="lyterm">接舆</span>的代称。</p></li>
+<li><p><a id="jieyu"></a><span class="lyterm">楚狂接舆</span>：楚国一位佯狂避世的隐士，因为不知其真名，所以根据他走近过孔子的车乘这件事，取了<span class="lyterm">接舆</span>的代称。700多年后西晋皇甫谧的《高士传》认为他名陆通，字接舆，还丰富了他对孔子的狂言，最后说他<span class="lyq">隐蜀峨眉山，寿数百年，俗传以为仙云</span>。</p></li>
 <li><p><span class="lyterm">凤</span>：喻指孔子。有匡时济世之才而不得其用，故称<span class="lyterm">德衰</span>，既含惋惜，又微讽孔子碌碌奔忙，不如避世保身。</p></li>
 <li><p><span class="lyterm">追</span>：补救，指用今后的正确行为弥补过去的错误。<span class="lyexample"><span>【例】</span><span>《韩非子·用人》：<span class="lyq"><a href="#shuo4">数</a>以<a href="#de2b">德</a>追祸，是断手而续以玉也。</span>（以德追祸：用恩惠去补偿（对别人的）祸害，这与 <a href="#14.34" class="lyref">14.34</a> <span class="lyq">以德报怨</span>截然不同。）</span></span></p></li>
 <li><p><span class="lyterm">已<a href="#er2">而</a></span>：罢了吧，算了吧。</p></li>
