--- a/aboly.html
+++ b/aboly.html
@@ -572,7 +572,7 @@ img.characterimg {
 </li>
 <li>
 <p><a id="junzi"></a><span class="lyterm">君子</span>：道德高尚的人，与“小人”相对。在古汉语中，这两个词含有强烈的褒贬，成为善与恶、受尊崇与被唾弃的通用代称，类似于现代口语的好人、坏蛋。孔子所认可的君子，具有丰富的内涵，需要通过后文不断加深理解。这里是说，“人不知而不愠”属于君子之风，而非等同于君子，可以对照后面<a href="#ren2">仁</a>的解释。与<a href="#xian2">贤人</a>相比，君子不特别强调才能出众，但也应当孜孜进修。<span class="lyseealso"><span>【参】</span><span>《礼记·曲礼上》：<span class="lyq">博闻强<a href="#zhi4c">识</a>而让，敦善行而不怠，谓之君子。</span>（敦：勤勉。）</span></span></p>
-<p><a id="daren"></a>“君子”最早见于《<a href="#shangshu">尚书</a>》的《虞夏书·大禹谟》（伪）、《周书·酒诰》等篇，用来称呼<a href="#qingdafushi">大夫</a>及以上的贵族官员，暗含对他们地位高、入<a href="#wenhuaxiayi">官学</a>、有文化的赞美。字面上看，“<a href="#jun1">君</a>之子”出身高贵，天生是要成为人上人的。后来，君子就成为有官职或地位高者的通称，相当于古装剧里的大人、老爷、贵人。相对的也叫小人，或称<a href="#yeren">野人</a>，也就是<a href="#shu4b">庶民</a>，平民百姓。这个用法并没有品性上的褒贬，只表达阶层高低、地位主从的事实。不少古画，比如明代的<a href="http://www.yupoo.com/photos/bluebeard/53885864/" class="lyurl" target="_blank">江舜夫官服图</a>，常会把仆从画得不成比例的小，从中可以体会君子、小人的这种含义。<span class="lyexample"><span>【例】</span><span><a href="#4.11" class="lyref">4.11</a> <span class="lyq">君子怀德，小人怀土。</span>《<a href="#shijing">诗经</a>·魏风·伐檀》：<span class="lyq">彼君子兮，不素餐兮！</span></span></span><span class="lyseealso"><span>【参】</span><span>清代刘宝楠《论语正义》：<span class="lyq">非有位而称君子者，以其人有道德，可任在位也。</span></span></span></p>
+<p><a id="daren"></a>“君子”最早见于《<a href="#shangshu">尚书</a>》的《虞夏书·大禹谟》（伪）、《周书·酒诰》等篇，用来称呼<a href="#qingdafushi">大夫</a>及以上的贵族官员，暗含对他们地位高、入<a href="#wenhuaxiayi">官学</a>、有文化的赞美。字面上看，“<a href="#jun1">君</a>之子”出身高贵，天生是要成为人上人的。后来，君子就成为有官职或地位高者的通称，相当于古装剧里的大人、老爷、贵人。相对的也叫小人，或称<a href="#yeren">野人</a>，也就是<a href="#shu4b">庶民</a>，平民百姓。这个用法并没有品性上的褒贬，只表达阶层高低、地位主从的事实。不少古画，比如明代的<a href="https://www.abolybook.org/img/aboly/jiangshunfu.jpg" class="lyurl" target="_blank">江舜夫官服图</a>，常会把仆从画得不成比例的小，从中可以体会君子、小人的这种含义。<span class="lyexample"><span>【例】</span><span><a href="#4.11" class="lyref">4.11</a> <span class="lyq">君子怀德，小人怀土。</span>《<a href="#shijing">诗经</a>·魏风·伐檀》：<span class="lyq">彼君子兮，不素餐兮！</span></span></span><span class="lyseealso"><span>【参】</span><span>清代刘宝楠《论语正义》：<span class="lyq">非有位而称君子者，以其人有道德，可任在位也。</span></span></span></p>
 <p><a id="junzizhilu"></a>不凭出身高低而论道德品行，是孔子那个时代赋予“君子”的新内涵。孔子创建的<a href="#wenhuaxiayi">私学</a>，开辟了平民通往君子之路。说、乐与君子并称，也说明<a href="#sidao">斯道</a>并不遥远乏味。</p>
 </li>
 </ul></div>
@@ -2857,7 +2857,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子曰：“君子坦荡荡，小人长戚戚。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">坦荡荡</span>：心胸坦率宽广。<span class="lyterm">坦</span>：平直宽广。<a id="dangdang"></a><span class="lyterm">荡荡</span>：空旷广大的样子。</p></li>
-<li><p><span class="lyterm">长<a href="#qi1">戚</a>戚</span>：经常忧愁恐惧。<span class="lyseealso"><span>【参】</span><span><a href="#12.4" class="lyref">12.4</a> <span class="lyq">内省不疚，夫何忧何惧？</span></span></span></p></li>
+<li><p><span class="lyterm">长<a href="#qi1">戚</a>戚</span>：经常忧愁恐惧。<span class="lyseealso"><span>【参】</span><span><a href="#12.4" class="lyref">12.4</a> <span class="lyq">内省不疚，夫何忧何惧？</span>清代李颙（<span class="lypinyin">yóng</span>）《四书反身录》：<span class="lyq"><a href="#4.16">君子喻于义</a>，故其心常荡荡；小人喻于利，故其心常戚戚。</span></span></span></p></li>
 </ul></div>
 </div>
 <a id="7.38"></a><div class="lyblob">
@@ -5597,7 +5597,7 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><a id="wei4a"></a><span class="lyterm">畏</span>：敬重，心服。<span class="lyexample"><span>【例】</span><span>《礼记·曲礼上》：<span class="lyq">贤者<a href="#xia2">狎</a>而敬之，畏而爱之。</span></span></span></p></li>
 <li><p><span class="lyterm">大人</span>：<a href="#daren">身居高位者</a>。如古装剧中平民见长官、下级见上级，即称大人。<span class="lyterm">畏大人</span>在当时是服从等级制度，在现代语境中相当于遵守社会秩序。</p></li>
-<li><p><a id="wu3"></a><span class="lyterm">侮</span>：轻慢，这是其本义。<span class="lyexample"><span>【例】</span><span>《荀子·君子》：<span class="lyq">刑当罪则威，不当罪则侮。</span>（当（<span class="lypinyin">dàng</span>）：合宜，相称。）</span></span><span class="lyseealso"><span>【参】</span><span>清代李颙（<span class="lypinyin">yóng</span>）《四书反身录》：<span class="lyq">读圣人之书而不能实体诸躬、见诸行，徒讲说论撰，假途<a href="#gan1">干</a>荣，皆侮圣言也。</span></span></span></p></li>
+<li><p><a id="wu3"></a><span class="lyterm">侮</span>：轻慢，这是其本义。<span class="lyexample"><span>【例】</span><span>《荀子·君子》：<span class="lyq">刑当罪则威，不当罪则侮。</span>（当（<span class="lypinyin">dàng</span>）：合宜，相称。）</span></span><span class="lyseealso"><span>【参】</span><span>《四书反身录》：<span class="lyq">读圣人之书而不能实体诸躬、见诸行，徒讲说论撰，假途<a href="#gan1">干</a>荣，皆侮圣言也。</span></span></span></p></li>
 </ul></div>
 </div>
 <a id="16.9"></a><div class="lyblob">
@@ -6721,8 +6721,8 @@ img.characterimg {
 <p class="lycenterpar">敬请期待！</p>
 <a id="references"></a><h1>参考材料</h1>
 <p>本书引用的内容，只是依据笔者的眼界好恶“择善而从”，偏颇在所难免。这里列出了主要的参考材料，以便读者查阅求证。其它材料（尤其是网上资料）无法详列，这里一并谨致谢忱。</p>
-<p>列出的每本书后面，有的带有点评，很多还没来得及加上。主要是背景介绍和很浅陋的一点感受，不敢对前辈的心血不敬，请读者明察。</p>
-<p><a id="baiwenban"></a>岳麓书社“古典名著普及文库”收录的都是“白文版”，也就是无注释无翻译不删节的古文原本。因为没有视觉上的不连续性，就易于把注意力集中到原文上，形成完整独立的认识。后面不逐一评介。</p>
+<p>列出的每本书后面，有的带有点评，主要是背景介绍和一点浅陋的读书感受，不敢对前辈的心血不敬，请读者明察。</p>
+<p><a id="baiwenban"></a>岳麓书社“古典名著普及文库”收录的都是“白文版”，也就是无注释无翻译不删节的古文原本。因为没有视觉上的不连续性，就易于把注意力集中到原文上，形成完整独立的认识。可惜出于“普及”，古代序跋基本也不保留了，中华书局的“中华国学文库”在这方面则较好。后面不逐一评介。</p>
 <a id="references-dictionaries"></a><h2>工具书</h2>
 <p><span class="lybook">《辞源》</span>（第3版），商务印书馆编辑部编，商务印书馆，2015年。学习古汉语的权威参考，注解扎实，例句多引自最初的书证，有一锤定音的效果。第3版同时推出了U盘版和<a href="http://ciyuan.cp.com.cn" class="lyurl" target="_blank">网络版</a>，但对比朗文、韦氏等英文词典的勤修苦练子孙满堂，可改进的地方实在太多，愿关心<a href="#lunyujishi">国家生命</a>者察焉。</p>
 <p><span class="lybook">《汉字源流字典》</span>，谷衍奎编，语文出版社，2008年。上推至甲骨文、篆文，分析了11000多个汉字的构造、本义与演变，图文并茂，多有创见，特别有益于理清字义的发展脉络。</p>
@@ -6811,7 +6811,7 @@ img.characterimg {
 <p><span class="lybook">《日知录集释》</span>，〔清〕顾炎武著，〔清〕黄汝成集释，栾保群、吕宗力校点，花山文艺出版社，1990年。</p>
 <p><span class="lybook">《四库全书总目提要》</span>，〔清〕纪昀总纂，河北人民出版社，2000年。</p>
 <p><span class="lybook">《中国哲学文献选编》</span>，陈荣捷编著，江苏教育出版社，国学书库·哲学类丛，2006年。</p>
-<p><a id="yaojijietijiqidufa"></a><span class="lybook">《要籍解题及其读法》</span>，梁启超著，岳麓书社，民国学术文化名著丛书，2010年。1923年，清华大学<span class="lyq">指定十来部有永久价值的古书令学生们每学期选读一部或两部，想令他们得些国学常识而且养成自动的读书能力</span>。本书就是梁启超先生（1873—1929）在清华介绍这些古典要籍的讲义。1925年初版，共8讲，主要涉及11本书，《论语》冠首。它写于传统学术遭遇西学冲击引发的“国学热”中，当时梁先生没有原书可查，且时间匆忙，算是闭卷考试。但以他中西交融的深厚学养，写来毫不费力，偶有离题发挥之处，正可一窥他的读书兴味与昂扬精神。</p>
+<p><a id="yaojijietijiqidufa"></a><span class="lybook">《要籍解题及其读法》</span>，梁启超著，岳麓书社，民国学术文化名著丛书，2010年。1923年，清华大学<span class="lyq">指定十来部有永久价值的古书令学生们每学期选读一部或两部，想令他们得些国学常识而且养成自动的读书能力</span>。本书就是梁启超（1873—1929）在清华介绍这些古典要籍的讲义。1925年初版，共8讲，主要涉及11本书，《论语》冠首。它写于传统学术遭遇西学冲击引发的“国学热”中，当时没有资料可查，时间又匆忙，算是闭卷考试。但以梁先生中西交融的深厚学养，写来毫不费力，偶有离题发挥之处，正可一窥他的读书兴味与昂扬精神。</p>
 <p><span class="lybook">《春秋史》</span>，顾德融、朱顺龙著，上海人民出版社，2001年。</p>
 <p><span class="lybook">《战国史》</span>（增订本），杨宽著，上海人民出版社，2003年。</p>
 <p><span class="lybook">《鲁国史》</span>，郭克煜等著，人民出版社，1994年。</p>
