--- a/aboly.html
+++ b/aboly.html
@@ -571,7 +571,7 @@ img.characterimg {
 <p>这句话讲全了是：人不知我，而我不愠。文言文中，尤其是较古的篇章，常会省略、变换主语或宾语，需要读者根据上下文自行补全。适应性练习：<a href="#2.9" class="lyref">2.9</a> <a href="#6.5" class="lyref">6.5</a> <a href="#10.3" class="lyref">10.3</a> <a href="#13.1" class="lyref">13.1</a> </p>
 </li>
 <li>
-<p><a id="junzi"></a><span class="lyterm">君子</span>：道德高尚的人，与“小人”相对。在古汉语中，这两个词含有强烈的褒贬，成为善与恶、受尊崇与被唾弃的通用代称，类似于现代口语的好人、坏蛋。孔子所认可的君子，具有丰富的内涵，需要通过后文不断加深理解。这里是说，“人不知而不愠”属于君子之风，而非等同于君子，可以对照后面<a href="#ren2">仁</a>的解释。与<a href="#xian2">贤人</a>相比，君子不特别强调才能出众，但也应当孜孜进修。<span class="lyseealso"><span>【参】</span><span>《礼记·曲礼上》：<span class="lyq">博闻强<a href="#zhi4c">识</a>而让，敦善行而不怠，谓之君子。</span>（敦：勤勉。）</span></span></p>
+<p><a id="junzi"></a><span class="lyterm">君子</span>：道德高尚的人，与“小人”相对。在古汉语中，这两个词含有强烈的褒贬，成为善与恶、受尊崇与被唾弃的通用代称，相当于现代口语的好人、坏蛋，英语中则类似于hero、villain的对立。孔子认可的君子，具有丰富的内涵，需要通过后文不断加深理解。这里是说，“人不知而不愠”属于君子之风，而非等同于君子，可以对照后面<a href="#ren2">仁</a>的解释。与<a href="#xian2">贤人</a>相比，君子不特别强调才能出众，但也应当孜孜进修。<span class="lyseealso"><span>【参】</span><span>《礼记·曲礼上》：<span class="lyq">博闻强<a href="#zhi4c">识</a>而让，敦善行而不怠，谓之君子。</span>（敦：勤勉。）</span></span></p>
 <p><a id="daren"></a>“君子”最早见于《<a href="#shangshu">尚书</a>》的《虞夏书·大禹谟》（伪）、《周书·酒诰》等篇，用来称呼<a href="#qingdafushi">大夫</a>及以上的贵族官员，暗含对他们地位高、入<a href="#wenhuaxiayi">官学</a>、有文化的赞美。字面上看，“<a href="#jun1">君</a>之子”出身高贵，天生是要成为人上人的。后来，君子就成为有官职或地位高者的通称，相当于古装剧里的大人、老爷、贵人。相对的也叫小人，或称<a href="#yeren">野人</a>，也就是<a href="#shu4b">庶民</a>，平民百姓。这个用法并没有品性上的褒贬，只表达阶层高低、地位主从的事实。不少古画，比如明代的<a href="https://www.abolybook.org/img/aboly/jiangshunfu.jpg" class="lyurl" target="_blank">江舜夫官服图</a>，常会把仆从画得不成比例的小，从中可以体会君子、小人的这种含义。<span class="lyexample"><span>【例】</span><span><a href="#4.11" class="lyref">4.11</a> <span class="lyq">君子怀德，小人怀土。</span>《<a href="#shijing">诗经</a>·魏风·伐檀》：<span class="lyq">彼君子兮，不素餐兮！</span></span></span><span class="lyseealso"><span>【参】</span><span>清代刘宝楠《论语正义》：<span class="lyq">非有位而称君子者，以其人有道德，可任在位也。</span></span></span></p>
 <p><a id="junzizhilu"></a>不凭出身高低而论道德品行，是孔子那个时代赋予“君子”的新内涵。孔子创建的<a href="#wenhuaxiayi">私学</a>，开辟了平民通往君子之路。说、乐与君子并称，也说明<a href="#sidao">斯道</a>并不遥远乏味。</p>
 </li>
@@ -1341,7 +1341,7 @@ img.characterimg {
 <div class="lyblobannotation">
 <ul class="lyblobitemize">
 <li>
-<p><span class="lyterm">巧笑倩（<span class="lypinyin">qiàn</span>）兮，美目盼兮，素以为绚（<span class="lypinyin">xuàn</span>）兮</span>。<span class="lyterm">巧笑</span>：精致美好的笑容。<span class="lyterm">倩</span>：口颊俏丽的样子，近似“笑意盈盈”的感觉，后来泛指美丽。<span class="lyterm">盼</span>：眼睛黑白分明波光流转的样子，就像沈从文小说《雪晴》里<span class="lyq">黑而有光的眼睛</span>。<span class="lyterm">绚</span>：色彩丰富灿烂的样子。</p>
+<p><span class="lyterm">巧笑倩（<span class="lypinyin">qiàn</span>）兮，美目盼兮，素以为绚（<span class="lypinyin">xuàn</span>）兮</span>。<span class="lyterm">巧笑</span>：精致美好的笑容。<span class="lyterm">倩</span>：口颊俏丽的样子，近似“笑意盈盈”的感觉，后来泛指美丽。<span class="lyterm">盼</span>：眼睛黑白分明波光流转的样子，一个字说尽了曹植《洛神赋》里的<span class="lyq">明眸善睐</span>，也就像沈从文小说《雪晴》里<span class="lyq">黑而有光的眼睛</span>。<span class="lyterm">绚</span>：色彩丰富灿烂的样子。</p>
 <p><span class="lyterm">巧笑倩兮，美目盼兮</span>出自《诗经·卫风·硕人》，是连续7句形容美人（<a href="#weijun">卫庄公</a>夫人庄姜）的末两句。<span class="lyterm">素以为绚兮</span>的出处则不可考，可能是当时《诗经》里有的，后来被删掉了，也可能是孔子或别人对前两句诗的评论，子夏请老师进一步解释。</p>
 </li>
 <li>
@@ -3131,7 +3131,7 @@ img.characterimg {
 <li><p><span class="lyterm">达巷</span>：地名，和 <a href="#7.29" class="lyref">7.29</a>  的<a href="#huxiang">互乡</a>一样无法确考。又有因为《礼记·曾子问》载，<span class="lyq">孔子曰：“昔者吾从老聃助葬于巷党”</span>，认为“巷党”属于一个词，指乡里，“达”是其地名。而高亨《<a href="#laozizhuyi">老子注译</a>》卷首“关于老子的几个问题”，受康有为《论语注》启发，认为“达”应归于上一章，即：“子罕言利，与命与仁，达。”颇有创见。</p></li>
 <li><p><span class="lyterm">执</span>：拿，持，引申为操持，从事。现代汉语有执教、执勤、执政等词。</p></li>
 </ul>
-<p>御、射同属<a href="#liuyi">六艺</a>，孔子的话既是谦虚也有<a href="#9.6">自嘲</a>，他追求的并非成名。<span class="lyseealso"><span>【参】</span><span>《后汉书·郑玄传》载，郑玄诫子书中说：<span class="lyq">显誉成于僚友，德行立于己志。……自乐以论赞之功，<a href="#shu4a">庶</a>不遗后人之羞。</span></span></span></p>
+<p>御、射同属<a href="#liuyi">六艺</a>，孔子的话既是谦虚也有<a href="#9.6">自嘲</a>，他追求的并非成名，更不能容忍不义之名。<span class="lyseealso"><span>【参】</span><span>《后汉书·郑玄传》载，郑玄诫子书中说：<span class="lyq">显誉成于僚友，德行立于己志。……自乐以论赞之功，<a href="#shu4a">庶</a>不遗后人之羞。</span></span></span></p>
 </div>
 </div>
 <a id="9.3"></a><div class="lyblob">
@@ -3377,7 +3377,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#9.23">9.23</a></div>
 <div class="lybloboriginaltext"><p>子曰：“后生可畏，焉知来者之不如今也？四十、五十而无闻焉，斯亦不足畏也已。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p> 郑玄注：<span class="lyterm">可畏</span><span class="lyq">者，言其才美服人也。……是时<a href="#yanhui">颜渊</a>死矣，故发言；何知来世将无此人！</span></p></li>
+<li><p> 郑玄注：<span class="lyterm">可<a href="#wei4a">畏</a></span><span class="lyq">者，言其才美服人也。……是时<a href="#yanhui">颜渊</a>死矣，故发言；何知来世将无此人！</span></p></li>
 <li><p><span class="lyterm">四十、五十而无闻焉</span>。<span class="lyterm">无<a href="#wen2a">闻</a></span>：没有名声，不为人知。颜回去世时年仅41岁。<span class="lyexample"><span>【例】</span><span>成语“默默无闻”。</span></span><span class="lyseealso"><span>【参】</span><span>《礼记·王制》：<span class="lyq">五十始衰。……六十不亲学。七十致政。</span>（<a href="#qin1">亲</a>学：亲自<a href="#menren">来学</a>，需执<a href="#baili">弟子礼</a>。其结构与含义都近似于“就读”。<a href="#zhi4">致</a>政：交还政权，即辞官退休。）</span></span></p></li>
 </ul></div>
 </div>
@@ -3806,7 +3806,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p><a href="#nangongkuo">南容</a>三复“白圭”，孔子以其兄之子妻之。</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">三复</span>：多次重读。<a id="san1"></a><span class="lyterm">三</span>是概数，多次，反复。类似地，现代汉语也常用的“<a href="#zai4">再</a>三”，不是两次三次，而是反复多次。<span class="lyexample"><span>【例】</span><span>《史记·屈原贾生列传》：<span class="lyq">其存君兴国而欲反覆之，一篇之中，三致志焉。</span>（反覆：扭转振救。）</span></span></p></li>
-<li><p><span class="lyterm">白圭</span>：指《诗经·大雅·抑》中的诗句：<span class="lyq">白<a href="#gui1">圭</a>之玷，尚可磨也；斯言之玷，不可为也</span>，意思是错话一说出口就再也无法挽回了。原诗是讽谏<a href="#zhouliwang">周厉王</a>修德守礼，并以自警。</p></li>
+<li><p><span class="lyterm">白圭</span>：指《诗经·大雅·抑》中的诗句：<span class="lyq">白<a href="#gui1">圭</a>之玷，尚可磨也；斯言之玷，不可为也</span>。意思是错话一说出口就再也无法挽回了，原诗是讽谏<a href="#zhouliwang">周厉王</a>修德守礼，并以自警。</p></li>
 </ul></div>
 </div>
 <a id="11.7"></a><div class="lyblob">
@@ -5595,7 +5595,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#16.8">16.8</a></div>
 <div class="lybloboriginaltext"><p>孔子曰：“君子有三畏：畏天命，畏大人，畏圣人之言。小人不知天命而不畏也，狎大人，侮圣人之言。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><a id="wei4a"></a><span class="lyterm">畏</span>：敬重，心服。<span class="lyexample"><span>【例】</span><span>《礼记·曲礼上》：<span class="lyq">贤者<a href="#xia2">狎</a>而敬之，畏而爱之。</span></span></span></p></li>
+<li><p><a id="wei4a"></a><span class="lyterm">畏</span>：敬重，心服。<span class="lyexample"><span>【例】</span><span><a href="#20.2" class="lyref">20.2</a> <span class="lyq">俨然人望而畏之。</span>《礼记·曲礼上》：<span class="lyq">贤者<a href="#xia2">狎</a>而敬之，畏而爱之。</span></span></span></p></li>
 <li><p><span class="lyterm">大人</span>：<a href="#daren">身居高位者</a>。如古装剧中平民见长官、下级见上级，即称大人。<span class="lyterm">畏大人</span>在当时是服从等级制度，在现代语境中相当于遵守社会秩序。</p></li>
 <li><p><a id="wu3"></a><span class="lyterm">侮</span>：轻慢，这是其本义。<span class="lyexample"><span>【例】</span><span>《荀子·君子》：<span class="lyq">刑当罪则威，不当罪则侮。</span>（当（<span class="lypinyin">dàng</span>）：合宜，相称。）</span></span><span class="lyseealso"><span>【参】</span><span>《四书反身录》：<span class="lyq">读圣人之书而不能实体诸躬、见诸行，徒讲说论撰，假途<a href="#gan1">干</a>荣，皆侮圣言也。</span></span></span></p></li>
 </ul></div>
@@ -5653,7 +5653,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li><p><span class="lyterm">夫人</span>：《曲礼下》孔颖达疏：<span class="lyq">夫，扶也，言扶持于王也。</span></p></li>
 <li><p><span class="lyterm">小童</span>：国君夫人对自己的谦称。《曲礼下》郑玄注：<span class="lyq">若云未成人也。</span></p></li>
-<li><p><a id="gua3"></a><span class="lyterm"><a href="#gua3a">寡</a></span>：王侯对自己的谦称，意为少<a href="#de2a">德</a>或孤独，二者是因果关系。对别国人谦称本国国君，可称<span class="lykeyword">寡君</span>。<span class="lyterm">寡小君</span>：《曲礼下》孔颖达疏：<span class="lyq">君之妻曰小君，而云“寡”者，亦从君为谦也。</span><span class="lyseealso"><span>【参】</span><span>《老子·三十九章》：<span class="lyq">贵以贱为本，高以下为基。是以侯王自称孤、寡、不谷。</span></span></span></p></li>
+<li><p><a id="gua3"></a><span class="lyterm"><a href="#gua3a">寡</a></span>：王侯对自己的谦称，意为少<a href="#de2a">德</a>或孤独（二者是因果关系）。对别国人谦称本国国君，可称<span class="lykeyword">寡君</span>。<span class="lyterm">寡小君</span>：《曲礼下》孔颖达疏：<span class="lyq">君之妻曰小君，而云“寡”者，亦从君为谦也。</span><span class="lyseealso"><span>【参】</span><span>《老子·三十九章》：<span class="lyq">贵以贱为本，高以下为基。是以侯王自称孤、寡、不谷。</span></span></span></p></li>
 </ul>
 </div>
 </div>
@@ -5672,20 +5672,26 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li>
 <p><span class="lyterm">阳货欲见孔子</span>。<a id="yanghuo"></a><span class="lyterm">阳货</span>：阳虎，字货，<a href="#mengshi">孟氏</a>族人，<a href="#jishi">季氏</a>的管家，“<a href="#16.2">陪臣执国命</a>”的风云人物。前505年（《左传·定公五年》），阳货囚禁了季氏新任的第5代宗主<a href="#jihuanzi">季桓子</a>，逐杀其亲信，逼其立盟就范，次年冬又与<a href="#dinggong">鲁定公</a>、<a href="#sanhuan">三桓</a>及<a href="#guoren">国人</a>立盟，从而掌握了鲁国国政。本章的对话应即发生在阳货掌权期间。</p>
-<p>前502年，阳货进一步谋划将<a href="#sanhuan">三桓</a>宗主一网打尽，由自己和串通好的季氏、叔孙氏两位庶子取代。冬十月大祭，即将动手干掉季桓子，<a id="gonglianchufu"></a>孟氏封邑<a href="#chengyi">成邑</a>之宰公敛处父察觉到异状，提醒主公<a href="#mengyizi">孟懿子</a>先作防范；季桓子也幸运地说动了卫士，逃到孟家。阳货于是挟持了<a href="#dinggong">鲁定公</a>和<a href="#shusunwushu">叔孙武叔</a>去攻打孟氏，被公敛处父两战击退，只好北退到临近齐国边境的讙（<span class="lypinyin">huān</span>）、阳关二城继续顽抗。次年6月，喘息已定的三桓一举将其逐出鲁国，他仍不甘寂寞，先跑到齐国，唆使<a href="#qijinggong">齐景公</a>攻打鲁国，事败被擒后连使诡计逃脱，又投奔晋国，继续施展他的<a href="#weijun">雄才大略</a>了。<span class="lyseealso"><span>【参】</span><span>《孟子·滕文公上》引用了他的一句名言：<span class="lyq">为富不仁矣，为仁不富矣</span>，是认为二者无法兼得。可以比较《圣经·新约·马太福音》6:24：<span class="lyqe">Ye cannot serve God and mammon.</span>（<span class="lyq">你们不能又事奉神，又事奉玛门。Mammon：财利贪欲的化身。</span>）鲁迅在《华盖集·十四年的“读经”》（发表于1925年底）中也表示：<span class="lyq">倘使老实，必不能阔。</span></span></span></p>
-<p>阳货比孔子年长，据说身形相貌与孔子很像。孔子大约17岁时去赴季氏招揽人才性质的宴会（<a id="jiwuzi"></a>当时是第3代宗主季武子在位），阳货已经是季氏管家了，他出言羞辱并赶走了孔子，现在又来拉拢孔子替自己效力。事见《史记·鲁周公世家》、《史记·孔子世家》。</p>
+<p>前502年，阳货进一步谋划将<a href="#sanhuan">三桓</a>宗主一网打尽，由自己和串通好的季氏、叔孙氏两位庶子取代。冬十月大祭，即将动手干掉季桓子，<a id="gonglianchufu"></a>孟氏封邑<a href="#chengyi">成邑</a>之宰公敛处父察觉到异状，提醒主公<a href="#mengyizi">孟懿子</a>先作防范；季桓子也幸运地说动了卫士，逃到孟家。阳货于是挟持了<a href="#dinggong">鲁定公</a>和<a href="#shusunwushu">叔孙武叔</a>去攻打孟氏，被公敛处父两战击退，只好北退到临近齐国边境的讙（<span class="lypinyin">huān</span>）、阳关二城继续顽抗。次年6月，喘息已定的三桓一举将其逐出鲁国，他仍不甘寂寞，先跑到齐国，唆使<a href="#qijinggong">齐景公</a>攻打鲁国，事败被擒后连使诡计逃脱，又投奔晋国，继续施展他的<a href="#weijun">雄才大略</a>了。<span class="lyseealso"><span>【参】</span><span>《孟子·滕文公上》引用了他的一句名言：<span class="lyq">为富不仁矣，为仁不富矣</span>，是认为二者无法兼得。可以比较《圣经·新约·马太福音》6:24：<span class="lyqe">Ye cannot serve God and mammon.</span>（<span class="lyq">你们不能又事奉神，又事奉玛门。Mammon：财利贪欲的化身。</span>）鲁迅1925年底发表的《华盖集·十四年的“读经”》中也表示：<span class="lyq">倘使老实，必不能阔。</span></span></span></p>
+<p>阳货比孔子年长，据说身形相貌与孔子很像。孔子大约17岁时去赴季氏招揽人才的宴会，<a id="jiwuzi"></a>当时第3代宗主季武子在位，阳货已经是季氏管家了，他出言羞辱并赶走了孔子，现在又来拉拢孔子替自己效力。事见《史记·鲁周公世家》、《史记·孔子世家》。</p>
 <p><span class="lyterm">见</span>：使动用法。阳货想让孔子主动登门拜见自己，形式上表示臣服顺从。</p>
 </li>
 <li>
-<p><span class="lyterm">归（<span class="lypinyin">kuì</span>）孔子豚</span>：（阳货）送给了孔子一只蒸乳猪（作为礼物）。目的是让孔子出于礼节不得不回拜他。当时孔子尚未出仕，身份是继承的<a href="#qingdafushi">士</a>，而阳货是正卿季桓子的管家，又掌控鲁国实权，地位不低于大夫。<span class="lyseealso"><span>【参】</span><span>《礼记·玉藻》：<span class="lyq">大夫亲赐士，士<a href="#baili">拜</a>受，又拜于其室。</span>（其室：指大夫家里。）</span></span></p>
-<p><span class="lyterm">归</span>：通“馈”，赠送。<span class="lyterm">豚</span>：整只乳猪。“蒸豚”是《孟子·滕文公下》对此事的说法。</p>
+<p><span class="lyterm">归（<span class="lypinyin">kuì</span>）孔子豚</span>：（阳货）送给了孔子一只蒸乳猪（作为礼物）。目的是让孔子出于礼节不得不回拜他。当时孔子尚未出仕，身份是继承的<a href="#qingdafushi">士</a>，而阳货是正卿季桓子的管家，又掌控鲁国实权，地位不亚于大夫。<span class="lyseealso"><span>【参】</span><span>《礼记·玉藻》：<span class="lyq">大夫亲赐士，士<a href="#baili">拜</a>受，又拜于其室。</span>（其室：指大夫家里。）</span></span></p>
+<p><span class="lyterm">归</span>：通“馈”，赠送。<span class="lyterm">豚</span>：整只乳猪。“蒸豚”的说法来自《孟子·滕文公下》。</p>
 </li>
 <li><p><span class="lyterm">时（<span class="lypinyin">sì</span>）其亡也</span>：等到他（阳货）出门以后。<span class="lyterm">时</span>：通“伺”，本义为窥察，引申为等候。<span class="lyterm">亡</span>：本义为逃跑，引申为外出，出门。</p></li>
 <li>
 <p><a id="tu2"></a><span class="lyterm">涂</span>：通“途”，道路，指阳货回家的路上。<span class="lyexample"><span>【例】</span><span>《韩非子·孤愤》中的<span class="lyq">当涂之人</span>，字面上是当道之人，意即掌握重权者。</span></span></p>
-<p>有认为从“谓孔子曰”到“孔子曰”之前，都是阳货自问自答的话，似有抬高孔子身份之嫌，这里不取。</p>
+<p>有认为从“谓孔子曰”到“孔子曰”之前，都是阳货自问自答的话，感觉有抬高孔子身份之嫌，故不取。</p>
 </li>
-<li><p><span class="lyterm">怀其宝而迷其邦</span>：身怀治国安邦的高才绝学，却在自己国内找不到方向（没有用武之地）。<span class="lyterm">迷其邦</span>：即迷于其邦。<span class="lyterm">迷</span>：迷路，不辨方向。动词“迷”不带宾语，省略了介词“于”。<span class="lyexample"><span>【例】</span><span>《史记·五帝本纪》：<span class="lyq"><a href="#shun">舜</a>耕历山，渔雷泽，陶河滨，作什器于寿丘，就时于负夏。</span>（每个停顿的后两个字都是地名，前3处均省略了介词“于”。什（<span class="lypinyin">shí</span>）器：日常生活用具。就时：趁时，指看行情做生意。）</span></span><span class="lyseealso"><span>【参】</span><span>《韩非子·解老》：<span class="lyq">凡失其所欲之路而妄行者之谓迷，迷则不能至于所欲至矣。</span>这里对“迷其邦”的解释与各家不同，他们大都把“其邦”视为“迷”的直接宾语，解释为使国家迷乱失序，似乎又拔高了孔子当时的身份，早至《<a href="#huaibaojueji">韩诗外传</a>》就已受其影响。</span></span></p></li>
+<li>
+<p><span class="lyterm">怀其宝而迷其邦</span>：身怀治国安邦的高才绝学，却在自己国内找不到方向（没有用武之地），言下之意类似于 <a href="#9.2" class="lyref">9.2</a> <span class="lyq">博学而无所成名</span>。<span class="lyterm">迷其邦</span>：即迷于其邦。<span class="lyterm">迷</span>：迷路，不辨方向。动词“迷”不带宾语，省略了介词“于”。<span class="lyexample"><span>【例】</span><span>《史记·五帝本纪》：<span class="lyq"><a href="#shun">舜</a>耕历山，渔雷泽，陶河滨，作什器于寿丘，就时于负夏。</span>（每个停顿的后两个字都是地名，前3处均省略了介词“于”。什（<span class="lypinyin">shí</span>）器：日常生活用具。就时：趁时，指看行情做生意。）</span></span></p>
+<div class="lyseealso">
+<p><span>【参】</span><span>《韩非子·解老》：<span class="lyq">凡失其所欲之路而妄行者之谓迷，迷则不能至于所欲至矣。</span></span></p>
+<p>这里对“迷其邦”的解释与各家不同，他们大都把“其邦”视为“迷”的直接宾语，解释为使国家迷乱失序，似乎又拔高了孔子当时的身份，早至《<a href="#huaibaojueji">韩诗外传</a>》就已受其影响。</p>
+</div>
+</li>
 <li><p><span class="lyterm">好从事而亟（<span class="lypinyin">qì</span>）失时</span>：热心于政治却屡屡错失机会。<a id="qi4a"></a><span class="lyterm">亟</span>：屡次，一再。</p></li>
 <li><p><span class="lyterm">岁不我与</span>：“<a href="#nov">岁不与我</a>”的倒装。这是阳货鼓动孔子为自己效力，催他表态的话。<span class="lyterm">与</span>：等待，这是从帮助、许可的意义引申来的，主语是<span class="lyterm">岁</span>（时间，岁月）。后有成语“时不我与”。</p></li>
 <li><p><span class="lyterm">吾将仕矣</span>：这是孔子对阳货的应付之辞。前501年阳货被逐后，孔子就接受鲁定公之命任<a href="#qirenkuinvyue">中都宰</a>，后又为<a href="#sikong">司空</a>、<a href="#sikou">司寇</a>，位阶升至<a href="#qingdafushi">大夫</a>。</p></li>
@@ -6389,7 +6395,7 @@ img.characterimg {
 <li><p><span class="lyterm">多</span>：表示后果的副词，适足以，仅仅，只，mainly，merely，only。<span class="lyexample"><span>【例】</span><span>《左传·襄公十四年》：<span class="lyq">吾令实过，悔之何及？多<a href="#wei4">遗</a>秦禽。</span>（禽：通“擒”。）</span></span></p></li>
 <li>
 <p><a id="liang4a"></a><span class="lyterm">量</span>（<span class="lypinyin">liàng</span>）：指能力范围，学识修养的深浅高低，calibre，capability。<span class="lyterm">其不知量</span>相当于说不明白他自己几斤几两。</p>
-<p>对应的动词义也读<span class="lypinyin">liàng</span>，即估计，评价，gauge，appraise。<span class="lyexample"><span>【例】</span><span>成语“量力而行”。北宋梅尧臣和欧阳修诗：<span class="lyq">犹喜共量天下士，亦胜东野亦胜韩。</span>（东野：唐代诗人孟郊的字。韩：韩愈。）</span></span></p>
+<p>对应的动词义也读<span class="lypinyin">liàng</span>，即估计，评价，gauge，appraise。<span class="lyexample"><span>【例】</span><span>成语“量力而行”、“不自量力”（简称“不自量”）。北宋梅尧臣和欧阳修诗：<span class="lyq">犹喜共量天下士，亦胜东野亦胜韩。</span>（东野：唐代诗人孟郊的字。韩：韩愈。）毛泽东1937年的《实践论》借用了本章末尾的句式：<span class="lyq">世上最可笑的是那些“知识里手”，有了<a href="#17.14">道听途说</a>的一知半解，便自封为“天下第一”，适足见其不自量而已。</span></span></span></p>
 </li>
 </ul>
 <p><span class="lyseealso"><span>【参】</span><span>东汉译《四十二章经》第8章：<span class="lyq">佛言：恶人害贤者，犹仰天而唾，唾不至天，还从已堕；逆风扬尘，尘不至彼，还坌己身。贤不可毁，祸必灭己。</span>（坌（<span class="lypinyin">bèn</span>）：（尘污）溅及。）</span></span></p>
