--- a/aboly.html
+++ b/aboly.html
@@ -571,8 +571,8 @@ img.characterimg {
 <p>这句话讲全了是：人不知我，而我不愠。文言文中，尤其是较古的篇章，常会省略、变换主语或宾语，需要读者根据上下文自行补全。适应性练习：<a href="#2.9" class="lyref">2.9</a> <a href="#6.5" class="lyref">6.5</a> <a href="#10.3" class="lyref">10.3</a> <a href="#13.1" class="lyref">13.1</a> </p>
 </li>
 <li>
-<p><a id="junzi"></a><span class="lyterm">君子</span>：道德高尚的人，与“小人”相对。在古汉语中，这两个词含有强烈的褒贬，成为善与恶、受尊崇与被唾弃的通用代称，相当于现代口语的好人、坏蛋，也近于英语中hero、villain的对立。孔子认可的君子，具有丰富的内涵，需要通过后文不断加深理解。这里是说，“人不知而不愠”属于君子之风，而非等同于君子，可以对照后面<a href="#ren2">仁</a>的解释。与<a href="#xian2">贤人</a>相比，君子不特别强调才能出众，但也应当孜孜进修。<span class="lyseealso"><span>【参】</span><span>《礼记·曲礼上》：<span class="lyq">博闻强<a href="#zhi4c">识</a>而让，敦善行而不怠，谓之君子。</span>（敦：勤勉。）</span></span></p>
-<p><a id="daren"></a>“君子”最早见于《<a href="#shangshu">尚书</a>》的《虞夏书·大禹谟》（伪）、《周书·酒诰》等篇，用来称呼<a href="#qingdafushi">大夫</a>及以上的贵族官员，暗含对他们地位高、入<a href="#wenhuaxiayi">官学</a>、有文化的赞美。字面上看，“<a href="#jun1">君</a>之子”出身高贵，天生是要成为人上人的。后来，君子就成为有官职或地位高者的通称，相当于古装剧里的大人、老爷、贵人。相对的也叫小人，或称<a href="#yeren">野人</a>，也就是<a href="#shu4b">庶民</a>，平民百姓。这个用法并没有品性上的褒贬，只表达阶层高低、地位主从的事实。不少古画，比如明代的<a href="https://www.abolybook.org/img/aboly/jiangshunfu.jpg" class="lyurl" target="_blank">江舜夫官服图</a>，常会把仆从画得不成比例的小，从中可以体会君子、小人的这种含义。<span class="lyexample"><span>【例】</span><span><a href="#4.11" class="lyref">4.11</a> <span class="lyq">君子怀德，小人怀土。</span>《<a href="#shijing">诗经</a>·魏风·伐檀》：<span class="lyq">彼君子兮，不素餐兮！</span></span></span><span class="lyseealso"><span>【参】</span><span>清代刘宝楠《论语正义》：<span class="lyq">非有位而称君子者，以其人有道德，可任在位也。</span></span></span></p>
+<p><a id="junzi"></a><span class="lyterm">君子</span>：道德高尚的人，与“小人”相对。在古汉语中，这两个词含有强烈的褒贬，成为善与恶、受尊崇与被唾弃的通用代称，相当于现代口语的好人、坏蛋，也约略近乎英语中hero、villain的对立。孔子认可的君子，具有丰富的内涵，需要通过后文不断加深理解。这里是说，“人不知而不愠”属于君子之风，而非等同于君子，可以对照后面<a href="#ren2">仁</a>的解释。与<a href="#xian2">贤人</a>相比，君子不特别强调才能出众，但也应当孜孜进修。<span class="lyseealso"><span>【参】</span><span>《礼记·曲礼上》：<span class="lyq">博闻强<a href="#zhi4c">识</a>而让，敦善行而不怠，谓之君子。</span>（敦：勤勉。）</span></span></p>
+<p><a id="daren"></a>“君子”最早见于《<a href="#shangshu">尚书</a>》的《虞夏书·大禹谟》（伪）、《周书·酒诰》等篇，用来称呼<a href="#qingdafushi">大夫</a>及以上的贵族官员，暗含对他们地位高、入<a href="#wenhuaxiayi">官学</a>、有文化的赞美。字面上看，“<a href="#jun1">君</a>之子”出身高贵，天生是要成为人上人的。后来，君子就成为有官职或地位高者的通称，相当于古装剧里的大人、老爷、贵人。相对的也叫小人，或称<a href="#yeren">野人</a>，也就是<a href="#shu4b">庶民</a>、平民百姓。这个用法并没有品性上的褒贬，只表达阶层高低、地位主从的事实。不少古画，如明代的<a href="https://www.abolybook.org/img/aboly/jiangshunfu.jpg" class="lyurl" target="_blank">江舜夫官服图</a>，常会把仆从画得不成比例的小，从中可以体会君子、小人的这种含义。<span class="lyexample"><span>【例】</span><span><a href="#4.11" class="lyref">4.11</a> <span class="lyq">君子怀德，小人怀土。</span>《<a href="#shijing">诗经</a>·魏风·伐檀》：<span class="lyq">彼君子兮，不素餐兮！</span></span></span><span class="lyseealso"><span>【参】</span><span>清代刘宝楠《论语正义》：<span class="lyq">非有位而称君子者，以其人有道德，可任在位也。</span></span></span></p>
 <p><a id="junzizhilu"></a>不凭出身高低而论道德品行，是孔子那个时代赋予“君子”的新内涵。孔子创建的<a href="#wenhuaxiayi">私学</a>，开辟了平民通往君子之路。说、乐与君子并称，也说明<a href="#sidao">斯道</a>并不遥远乏味。</p>
 </li>
 </ul></div>
@@ -611,7 +611,7 @@ img.characterimg {
 <p><a id="yu2"></a><span class="lyterm">与</span>：句末语气词，可以表示感叹、疑问或反问，相当于稍重读的啊、呀、吗，后来写作“欤”（<span class="lypinyin">yú</span>）。<span class="lyexample"><span>【例】</span><span><a href="#5.22" class="lyref">5.22</a> <span class="lyq">归与！归与！</span><a href="#8.6" class="lyref">8.6</a> <span class="lyq">君子人与？君子人也。</span><a href="#12.21" class="lyref">12.21</a> <span class="lyq">先事后得，非崇德与？</span></span></span></p>
 <p><a id="ren2"></a><span class="lyterm">仁</span>：人与人相亲相爱。字形结构是二人为仁，它是儒家思想的核心，衡量“真正的人”的第一标准。《论语》中出现的仁，有的是评价人的标准，有的是修行的目标，有的是仁的体现，有的指仁人，需要根据上下文具体把握。<span class="lyexample"><span>【例】</span><span><a href="#5.5" class="lyref">5.5</a> <span class="lyq">或曰：“雍也仁而不佞。”</span><a href="#6.7" class="lyref">6.7</a> <span class="lyq">回也，其心三月不违仁。</span><a href="#14.16" class="lyref">14.16</a> <span class="lyq">如其仁，如其仁！</span><a href="#1.6" class="lyref">1.6</a> <span class="lyq">泛爱众而亲仁。</span></span></span></p>
 <div class="lyseealso">
-<p><span>【参】</span><span>孔子开创性地将“仁”提高到人之至<a href="#de2">德</a>、总德的地位，以人为本，注重人与人之间的良性关系。《论语》从多方面阐述了仁，影响最大的要数 <a href="#6.30" class="lyref">6.30</a> <a href="#12.1" class="lyref">12.1</a> <a href="#12.22" class="lyref">12.22</a> 。这里摘录后世对仁的若干论述作为参考。</span></p>
+<p><span>【参】</span><span>孔子开创性地将“仁”提高到人之至<a href="#de2">德</a>、总德的地位，以人为本，注重人与人之间的良性关系。《论语》从多方面阐述了仁，影响最大的要数 <a href="#6.30" class="lyref">6.30</a> <a href="#12.1" class="lyref">12.1</a> <a href="#12.22" class="lyref">12.22</a> 。这里摘录后世对仁的若干论述以供参考。</span></p>
 <ul>
 <li><p> 《中庸》：<span class="lyq">仁者人也，亲亲为大。</span>（<a id="qinqin"></a>第一个<a href="#qin1">亲</a>是动词，爱；第二个是名词，亲属，特指父母。）</p></li>
 <li><p> 《孟子·离娄下》：<span class="lyq">仁者爱人，有礼者敬人。</span>（讲仁礼。亦见 <a href="#12.22" class="lyref">12.22</a> 。）</p></li>
@@ -643,8 +643,8 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><a id="xiushen"></a><span class="lyterm">吾日三省（<span class="lypinyin">xǐng</span>）吾身</span>。<span class="lyterm">日</span>：每天，daily。<a id="xing3"></a><span class="lyterm">省</span>：（自我）检查，introspect。<span class="lyterm">吾身</span>：我自己，自身，myself。<span class="lyseealso"><span>【参】</span><span><a href="#14.42" class="lyref">14.42</a> 。宋儒根据《礼记·大学》提出<span class="lykeyword">三纲八目</span>，认为大人<a href="#junzi">君子</a>应该修身、齐家、治国、平天下，其根本在于修身：<span class="lyq">自<a href="#tianzi">天子</a>以至于<a href="#shu4b">庶人</a>，<a href="#yi1">壹</a>是皆以修身为本。</span>修身说的是陶冶精神，修养品德，也就是<a href="#xuezuozhenren">学做人</a>。柳诒徵《中国文化史》弁言认为：<span class="lyq">庶人修其身，不愧天子；天子不修其身，不足侪庶人。</span>（侪（<span class="lypinyin">chái</span>）：同等，并列。）扩展阅读：<a href="http://www.inspirationpeak.com/cgi-bin/stories.cgi?record=118" class="lyurl" target="_blank"><em>Start With Yourself</em></a>。</span></span></p></li>
 <li>
-<p><a id="zhong1"></a><span class="lyterm">忠</span>：做事尽心尽力无私心。从字形结构看，可以理解为出于心正中。后又引申为对君上忠诚无二心。<span class="lyseealso"><span>【参】</span><span>贾谊《新书·道术》：<span class="lyq">爱利出中谓之忠，反忠为倍。</span>（<a id="bei4"></a>倍：通“背”。）<a id="gongsunhong"></a>《史记·平津侯主父列传》写汉丞相公孙弘曲承上意，<span class="lyq">不肯面折庭争</span>，任左内史时，<span class="lyq">尝与公卿约议，至上前，皆倍其约以顺上旨。汲黯庭诘弘曰：“齐人多诈而无情实，始与臣等<a href="#jian4f">建</a>此议，今皆倍之，不忠。”上问弘，弘谢曰：“夫知臣者以臣为忠，不知臣者以臣为不忠。”上然弘言。</span>（上：指汉武帝。汲黯：当时著名的直臣。齐人：指公孙弘。<a id="xie4a"></a>谢：认错，道歉。然：认为对。）公孙弘的回答外方内圆，把忠于事转为忠于君，让汉武帝很是受用。</span></span></p>
-<p><a id="xin4"></a><span class="lyterm">信</span>：诚实可靠，言出必行。<span class="lyseealso"><span>【参】</span><span>《国语·晋语八》：<span class="lyq">忠自中，而信自身。</span>韦昭注：<span class="lyq">身行信也。</span>清代黄式三《论语后案》：<span class="lyq">忠者心之尽，信者言之实。</span></span></span></p>
+<p><a id="zhong1"></a><span class="lyterm">忠</span>：做事尽心尽力无私心。字形上看，可以理解为出于心正中。后又引申为对君上忠诚无二心。<span class="lyseealso"><span>【参】</span><span>贾谊《新书·道术》：<span class="lyq">爱利出中谓之忠，反忠为倍。</span>（<a id="bei4"></a>倍：通“背”。）<a id="gongsunhong"></a>《史记·平津侯主父列传》写汉武帝的丞相公孙弘曲承上意，<span class="lyq">不肯面折庭争</span>，任左内史时，<span class="lyq">尝与公卿约议，至上前，皆倍其约以顺上旨。汲黯庭诘弘曰：“齐人多诈而无<a href="#qing2">情</a>实，始与臣等<a href="#jian4f">建</a>此议，今皆倍之，不忠。”上问弘，弘谢曰：“夫知臣者以臣为忠，不知臣者以臣为不忠。”上然弘言。</span>（汲黯：当时著名的直臣。齐人：指公孙弘。<a id="xie4a"></a>谢：认错，道歉。然：认为对。）公孙弘的回答外方内圆，把忠于事转为忠于君，让汉武帝很是受用。</span></span></p>
+<p><a id="xin4"></a><span class="lyterm">信</span>：诚实可靠，言出必行。<span class="lyseealso"><span>【参】</span><span>《国语·晋语八》：<span class="lyq">忠自中，而信自身。</span>三国韦昭注：<span class="lyq">身行信也。</span>清代黄式三《论语后案》：<span class="lyq">忠者心之尽，信者言之实。</span></span></span></p>
 </li>
 <li><p><a id="chuan2"></a><span class="lyterm">传</span>（<span class="lypinyin">chuán</span>）：传授，指老师教过的内容。</p></li>
 </ul></div>
@@ -689,7 +689,7 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><a id="dizi"></a><span class="lyterm">弟子</span>：做弟弟的和做孩子的，后生晚辈。这里主要指年纪幼小的人，少年儿童。“弟子”更常见的含义是<a href="#menren">学生</a>，子侄晚辈的含义后来多用“子弟”表示。</p></li>
 <li><p><span class="lyterm">入</span>：在家里。<span class="lyterm">出</span>：出门在外。</p></li>
-<li><p><a id="qin1"></a><span class="lyterm">亲</span>：动词，接近，结交。其本义为关系近，感情深。后来亲密、亲爱都成为常用词。</p></li>
+<li><p><a id="qin1"></a><span class="lyterm">亲</span>：动词，接近，结交。其本义为关系近、感情深，后来亲密、亲爱都成为常用词。</p></li>
 <li>
 <p><a id="wen2"></a><span class="lyterm">文</span>：指文章辞令，写作表达能力，这是启蒙阶段的基本功。</p>
 <p><a href="#6.27" class="lyref">6.27</a>  的<span class="lyq">博学于文</span>，则指文化内涵更丰富的礼乐教化，相当于 <a href="#5.13" class="lyref">5.13</a>  的<span class="lyq">夫子之文章</span>，<a href="#9.5" class="lyref">9.5</a>  的<a href="#siwen">斯文</a>。这是<a href="#junzi">君子</a>有责任继承发扬的精神财富。</p>
@@ -6812,9 +6812,9 @@ img.characterimg {
 <p><span class="lybook">《晏子春秋译注》</span>，孙彦林、周民、苗若素译注，齐鲁书社，1991年。</p>
 <p><span class="lybook">《晏子春秋校注》</span>，张纯一撰，梁运华点校，中华书局，中华国学文库，2017年。</p>
 <p><span class="lybook">《商君书·韩非子》</span>，张觉点校，岳麓书社，古典名著普及文库，2006年。后附《申子》、《慎子》。</p>
-<p><span class="lybook">《吕氏春秋·淮南子》</span>，杨坚点校，岳麓书社，古典名著普及文库，2006年。</p>
 <p><span class="lybook">《韩非子校注》</span>（修订本），《韩非子》校注组编写，周勋初修订，凤凰出版社，2009年。</p>
 <p><span class="lybook">《韩非子校注》</span>，张觉校注，岳麓书社，古典名著标准读本，2006年。</p>
+<p><span class="lybook">《吕氏春秋·淮南子》</span>，杨坚点校，岳麓书社，古典名著普及文库，2006年。</p>
 <p><span class="lybook">《说苑译注》</span>，〔西汉〕刘向撰，程翔译注，北京大学出版社，2009年。</p>
 <p><span class="lybook">《帝王世纪·世本·逸周书·古本竹书纪年》</span>，陆吉等校点，齐鲁书社，2010年。</p>
 <p><span class="lybook">《逸周书校补注译》</span>（修订本），黄怀信著，三秦出版社，2006年。</p>
