--- a/aboly.html
+++ b/aboly.html
@@ -555,7 +555,7 @@ img.characterimg {
 <p>在对话中，“子”用来客气地称呼对方，相当于您。<span class="lyexample"><span>【例】</span><span><a href="#2.21" class="lyref">2.21</a> <span class="lyq">或谓孔子曰：“子奚不为政？”</span></span></span></p>
 </li>
 <li>
-<p><span class="lyterm">时习</span>。<a id="shi2"></a><span class="lyterm">时</span>：按时，时常，timely, regularly。<span class="lyterm">习</span>：复习，review，是对所学的回顾；也可以理解为练习，practice，是对理论的实践，即知行合一。习的繁体字是習，本义为幼鸟扇动翅膀反复试飞。</p>
+<p><span class="lyterm">时习</span>。<a id="shi2"></a><span class="lyterm">时</span>：按时，时常，timely, regularly。<a id="xi2"></a><span class="lyterm">习</span>：复习，review，是对所学的回顾；也可以理解为练习，practice，是对理论的实践，即知行合一。习的繁体字是習，本义为幼鸟扇动翅膀反复试飞。</p>
 <p>学习的目的，有求禄，有求知，有修身。孔子之学，学为<a href="#junzi">君子</a>，生活修身不分离，理论实践不偏废。<span class="lyseealso"><span>【参】</span><span><a href="#2.18" class="lyref">2.18</a> <a href="#7.20" class="lyref">7.20</a> <a href="#6.3" class="lyref">6.3</a> <a href="#4.5" class="lyref">4.5</a> <a href="#13.5" class="lyref">13.5</a> 。<a id="xuezuozhenren"></a>教育家陶行知（1891—1946）说：<span class="lyq">千教万教，教人求真；千学万学，学做真人。</span></span></span></p>
 </li>
 <li>
@@ -1043,7 +1043,7 @@ img.characterimg {
 <a id="2.11"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#2.11">2.11</a></div>
 <div class="lybloboriginaltext"><p>子曰：“温故而知新，可以为师矣。”</p></div>
-<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm">温故</span>。<span class="lyterm">故</span>：旧的东西，指已学过的知识。<span class="lyterm">温</span>：复习，review，所取的意思是不使其生冷凝滞，而要热乎乎、活泼泼地。后来有成语“温故知新”。</p></li></ul></div>
+<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm">温故</span>。<span class="lyterm">故</span>：旧的东西，指已学过的知识。<span class="lyterm">温</span>：复习，review，所取的意思是不使其生冷凝滞，而要热乎乎、活泼泼地。后来有成语“温故知新”，现代经常“温<a href="#xi2">习</a>”连用。</p></li></ul></div>
 </div>
 <a id="2.12"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#2.12">2.12</a></div>
@@ -1226,7 +1226,7 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">谓</span>：评论，评说。句式“A谓B”的意思是A评论B，“A谓B曰”是A对B说。<span class="lyexample"><span>【例】</span><span><a href="#13.8" class="lyref">13.8</a> <span class="lyq">子谓卫公子荆善居室。</span><a href="#2.21" class="lyref">2.21</a> <span class="lyq">或谓孔子曰：“子奚不为政？”</span></span></span><a href="#9.21" class="lyref">9.21</a> <span class="lyq">子谓颜渊曰</span>是唯一的特例。</p></li>
 <li>
-<p><span class="lyterm">八佾（<span class="lypinyin">yì</span>）</span>：8×8人的舞蹈方阵。<span class="lyterm">佾</span>：乐舞的队列。<span class="lyexample"><span>【例】</span><span>《史记·秦本纪》载，<a href="#qinmugong">秦穆公</a>曾以<span class="lyq">女乐二八<a href="#wei4">遗</a><a href="#yidihuaxia">戎</a>王</span>，“二八”就是二佾。</span></span></p>
+<p><span class="lyterm">八佾（<span class="lypinyin">yì</span>）</span>：8×8人的舞蹈方阵。<a id="yi4l"></a><span class="lyterm">佾</span>：乐舞的队列。<span class="lyexample"><span>【例】</span><span>《史记·秦本纪》载，<a href="#qinmugong">秦穆公</a>曾以<span class="lyq">女乐二八<a href="#wei4">遗</a><a href="#yidihuaxia">戎</a>王</span>，“二八”就是二佾。</span></span></p>
 <p>据《左传·隐公五年》，天子才可用八佾，诸侯用六佾，卿大夫用四佾，士用二佾。因为<a href="#zhougong">周公</a>的功德，鲁国也被特许使用八佾。季氏作为卿大夫而用八佾，是<a href="#zhengming">非分越礼</a>的。</p>
 <a id="jianyongbayi"></a><div class="lyseealso">
 <p><span>【参】</span><span>《左传·昭公二十五年》（前517年）：<span class="lyq">将<a href="#di4">禘</a>于襄公，万者二人，其众万于季氏。</span>（<a id="xianggong"></a>襄公：鲁襄公（前575年—前542年），名午，鲁国第22任国君，<a href="#zhaogong">鲁昭公</a>之父。万：一种大型乐舞。其众：指鲁公室八佾中的大多数舞师，他们去和季氏自有的四佾组成八佾了。<a id="jipingzi"></a>季氏：指当时的权臣、<a href="#jishi">季孙氏</a>第4任宗主季平子（季孙意如），他是<a href="#jihuanzi">季桓子</a>之父。）</span></p>
@@ -2709,7 +2709,7 @@ img.characterimg {
 <a id="7.22"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#7.22">7.22</a></div>
 <div class="lybloboriginaltext"><p>子曰：“三人行，必有我师焉。择其善者而从之，其不善者而改之。”</p></div>
-<div class="lyblobannotation"><p><span class="lyseealso"><span>【参】</span><span><a href="#9.24" class="lyref">9.24</a> 。前542年<a href="#zichan">子产</a><a href="#buhuixiangxiao">不毁乡校</a>，也曾有相近的议论。</span></span></p></div>
+<div class="lyblobannotation"><p><span class="lyseealso"><span>【参】</span><span><a href="#9.24" class="lyref">9.24</a> <span class="lyq">法语之言，能无从乎？改之为贵。巽与之言，能无说乎？绎之为贵。</span>前542年<a href="#zichan">子产</a><a href="#buhuixiangxiao">不毁乡校</a>，也有相近的议论。</span></span></p></div>
 </div>
 <a id="7.23"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#7.23">7.23</a></div>
@@ -4470,7 +4470,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子曰：“‘善人为邦百年，亦可以胜残去杀矣。’诚哉是言也！”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize"><li>
 <p><span class="lyterm"><a href="#sheng4b">胜</a>残去杀</span>：消解残暴，免除杀戮。这句引语的出处不详。“胜残去杀”与下一章的普施仁政，就像<a href="#lijiliyun">小康</a>与大同的差别，所以用<a href="#yi4d">亦</a>。</p>
-<p>“百年”与下一章的“世”，都说明政策应具有持续性、前瞻性，才能移风易俗，化物善道。所以有成语：十年树木，百年树人。<span class="lyseealso"><span>【参】</span><span><a href="#19.18" class="lyref">19.18</a> <span class="lyq">其不改父之臣与父之政，是难能也。</span></span></span></p>
+<p>“百年”与下一章的“世”，都说明政策应具有持续性、前瞻性，才能<span class="lyq">渐化物以善道</span>（皇侃引南朝宋颜延之语）。所以有成语：十年树木，百年树人。<span class="lyseealso"><span>【参】</span><span><a href="#19.18" class="lyref">19.18</a> <span class="lyq">其不改父之臣与父之政，是难能也。</span></span></span></p>
 </li></ul></div>
 </div>
 <a id="13.12"></a><div class="lyblob">
@@ -4478,7 +4478,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子曰：“如有王者，必世而后仁。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">王者</span>：指孔子理想中以<a href="#wangdao">王道</a>治天下的贤君圣人。</p></li>
-<li><p><span class="lyterm">必世而后仁</span>：指一定要经历长期教化，才能真正实现仁政。一<span class="lyterm">世</span>为30年，相当于一代人的时间，孔子认为这是施行仁政前的过渡阶段。<span class="lyseealso"><span>【参】</span><span>刘宝楠《论语正义》引清代包慎言《论语温故录》：<span class="lyq">言“必世”者，量民力之所能，不迫切之也。</span></span></span></p></li>
+<li><p><span class="lyterm">必世而后仁</span>：指一定要经历长期教化，才能真正实现仁政。一<span class="lyterm">世</span>为30年，相当于一代人的时间，孔子认为这是施行仁政前的过渡阶段。他当然热切盼望着王者出现，但也并不因此低估移风易俗的难度。<span class="lyseealso"><span>【参】</span><span>刘宝楠《论语正义》引清代包慎言《论语温故录》：<span class="lyq">言“必世”者，量民力之所能，不迫切之也。</span></span></span></p></li>
 </ul></div>
 </div>
 <a id="13.13"></a><div class="lyblob">
@@ -4877,7 +4877,7 @@ img.characterimg {
 <a id="14.19"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#14.19">14.19</a></div>
 <div class="lybloboriginaltext"><p>子言<a href="#weilinggong">卫灵公</a>之无道也，<a href="#jikangzi">康子</a>曰：“夫如是，奚而不丧？”孔子曰：“<a href="#kongwenzi">仲叔圉</a>治宾客，<a href="#zhutuo">祝鮀</a>治宗庙，<a href="#wangsunjia">王孙贾</a>治军旅，夫如是，奚其丧？”</p></div>
-<div class="lyblobannotation"><p>卫灵公用人以才，所以不致败亡。<span class="lyseealso"><span>【参】</span><span>《史记·伍子胥列传》载，伍子胥率领吴军攻破楚国，报了父兄之仇，楚大夫<a href="#shenbaoxu">申包胥</a>奔赴秦国借兵，<span class="lyq">秦不许。包胥立于秦廷，昼夜哭，七日七夜不绝其声。秦哀公怜之曰：“楚虽无道，有臣若是，可无存乎！”乃遣车五百乘救楚击吴。</span></span></span></p></div>
+<div class="lyblobannotation"><p>卫灵公用人以才，所以不致败亡。也就是说，如果具备健全的制度，使<span class="lyq"><a href="#xian2">贤者在位，能者在职</a></span>，即使在位者能力平庸或私德有亏，只要不像<a href="#zhou">殷纣王</a>那样<span class="lyq">知足以距谏，言足以饰非</span>，一个国家或机构仍然可以正常运转。孔子的理想超乎于此，但并不否认其合理性。<span class="lyseealso"><span>【参】</span><span>《史记·伍子胥列传》载，伍子胥率领吴军攻破楚国，报了父兄之仇，楚大夫<a href="#shenbaoxu">申包胥</a>奔赴秦国借兵，<span class="lyq">秦不许。包胥立于秦廷，昼夜哭，七日七夜不绝其声。秦哀公怜之曰：“楚虽无道，有臣若是，可无存乎！”乃遣车五百乘救楚击吴。</span></span></span></p></div>
 </div>
 <a id="14.20"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#14.20">14.20</a></div>
@@ -5944,7 +5944,7 @@ img.characterimg {
 <li><p><a id="sannianzhisang"></a><span class="lyterm">三年之丧</span>：按周礼，子为父、妻为夫、臣为君、诸侯为天子，均服<a href="#wufu">斩衰</a>三年；母后于父去世，为之服齐衰三年；母先于父去世，则服齐衰一年并拄哭丧棒，称为齐衰杖<a href="#ji1">期</a>。三年之丧的跨度是3年，实为25或27个月，期间丧礼逐渐减轻。</p></li>
 <li><p><span class="lyterm">崩</span>：本义为山体迸裂倒塌，引申为败坏。这句话后来衍生出成语“礼坏乐崩”（又作“礼崩乐坏”）。</p></li>
 <li><p><span class="lyterm">燧</span>（<span class="lypinyin">suì</span>）：燧木，古代的取火用具。<span class="lyterm">钻燧改火</span>：古人钻木取火，四季所用的木料都不相同，<span class="lyterm">改火</span>指木料轮换过一遍，即一年之期。<span class="lyterm">旧谷既没，新谷既升</span>也是这个意思，生命往复循环的意味更浓。这是宰予的大胆建议，孔子的回答，让他以问心无愧为准。本章也体现了师徒二人的语言艺术。</p></li>
-<li><p><span class="lyterm"><a href="#ji1">期</a>可已矣</span>：一年也就够了吧。</p></li>
+<li><p><span class="lyterm"><a href="#ji1">期</a>（<span class="lypinyin">jī</span>）可已矣</span>：一年也就够了吧。有认为开头的“期已久矣”也应读 <span class="lypinyin">jī</span>，然后这里总结重申，亦通。</p></li>
 <li><p><a id="zhi3"></a><span class="lyterm">旨</span>：美味。<span class="lyexample"><span>【例】</span><span>成语“甘旨肥浓”。</span></span></p></li>
 <li><p><span class="lyterm">天下之通丧</span>。从其它资料看，当时“三年之丧”可能近乎名存实亡了，宰予的提议大概和 <a href="#3.17" class="lyref">3.17</a> <span class="lyq">子贡欲去告朔之饩羊</span>原因相似，孔子却希望像<a href="#lugongbiansu">鲁公变俗</a>那样恢复这个传统。<span class="lyseealso"><span>【参】</span><span>《礼记·檀弓上》载，某位有丧在身的鲁国人，早上刚进行了第25个月的大祥之祭，晚上就唱起歌来，<span class="lyq">子路笑之。夫子曰：“由，尔<a href="#ze2a">责</a>于人，终无已夫？三年之丧，亦已久矣夫。”子路出，夫子曰：“又多乎哉？逾月则其善也。”</span>这里孔子既称赞此人难能可贵，又希望他善始善终。郑玄注：<span class="lyq">为时如此，人行三年丧者希，抑子路以善彼。</span>《孟子·滕文公上》载，前327年滕定公去世，太子派人向孟子请教丧礼事宜，孟子回答：<span class="lyq">诸侯之礼，……，吾尝闻之矣。三年之丧，……，自天子达于庶人，<a href="#sandai">三代</a>共之</span>，和孔子的说法相同。滕国将用三年之丧时，结果却是<span class="lyq">父兄百官皆不欲，曰：“吾宗国鲁先君莫之行，吾先君亦莫之行也，至于子之身而反之，不可。”</span></span></span></p></li>
 <li>
@@ -5974,7 +5974,7 @@ img.characterimg {
 <p>孔子曰：“括而羽之，镞而砺之，其入之不亦深乎？”</p>
 <p>子路<a href="#zaibai">再拜</a>，敬而受教。</p>
 </div>
-<p>（反：放还。檠（<span class="lypinyin">qíng</span>）：校准弓弩的工具。揉：烘烤原木使之成型。括：通“栝”（<span class="lypinyin">kuò</span>），箭尾咬弦处，用作动词，制栝。镞（<span class="lypinyin">zú</span>）：（加装）箭头。砺：磨。）</p>
+<p>（反：放还。檠（<span class="lypinyin">qíng</span>）：校准弓弩的工具。揉：烘烤原木使之成型。括：通“栝”（<span class="lypinyin">kuò</span>），箭尾咬弦处，用作动词，制栝。镞（<span class="lypinyin">zú</span>）：（加装）箭头。砺：磨。子路的看法是后来“树大自直”论调的始祖。）</p>
 </div></div>
 </div>
 <a id="17.24"></a><div class="lyblob">
@@ -6061,7 +6061,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>齐人归女乐，季桓子受之，三日不朝。孔子行。</p></div>
 <div class="lyblobannotation">
 <ul class="lyblobitemize">
-<li><p><a id="qirenkuinvyue"></a><span class="lyterm">齐人归（<span class="lypinyin">kuì</span>）女乐</span>：指前498年（<a href="#dinggong">鲁定公</a>12年）冬，齐国为了惑乱鲁政而赠送定公女乐骏马一事。<span class="lyterm">归</span>：通“馈”。据《史记·孔子世家》，前501年，定公任用孔子为中都（在今山东省济宁市汶上县西，<a href="#wenshui">汶水</a>之南）宰，孔子当时已经51岁了。<a id="sikong"></a>后来升任司空（主管工程营建）、<a href="#sikou">司寇</a>，理政3月就使鲁国面貌一新。齐国认为孔子为政必使鲁国称雄，对接壤的齐国是重大威胁，应该遏止这个势头，<span class="lyq">于是选齐国中女子好者八十人，皆衣<a href="#wen2">文</a>衣而舞《康乐》，文马三十驷，遗鲁君，陈女乐文马于鲁城南高门外。</span>（好：美。<a id="wei4"></a>遗（<span class="lypinyin">wèi</span>）：赠送。）<a href="#jihuanzi">季桓子</a>先去替定公鉴赏了一番，又劝定公亲自观摩，最终收下了这些诱人的礼物。于是国政荒废，次年春的郊祭也敷衍了事，孔子无奈<a href="#13.9">去了卫国</a>。后来，<span class="lyq">桓子<a href="#kui4">喟</a>然叹曰：“夫子罪我以群婢故也夫！”</span>定公耽于女乐时可不知道，他的日子只剩下3年了。</p></li>
+<li><p><a id="qirenkuinvyue"></a><span class="lyterm">齐人归（<span class="lypinyin">kuì</span>）女乐</span>：指前498年（<a href="#dinggong">鲁定公</a>12年）冬，齐国为了惑乱鲁政而赠送定公女乐骏马一事。<span class="lyterm">归</span>：通“馈”。据《史记·孔子世家》，前501年，定公任用孔子为中都（在今山东省济宁市汶上县西，<a href="#wenshui">汶水</a>之南）宰，孔子当时已经51岁了。<a id="sikong"></a>后来升任司空（主管工程营建）、<a href="#sikou">司寇</a>，理政3月就使鲁国面貌一新。齐国认为孔子为政必使鲁国称雄，对接壤的齐国是重大威胁，应该遏止这个势头，<span class="lyq">于是选齐国中女子好者八十人，皆衣<a href="#wen2">文</a>衣而舞《康乐》，文马三十驷，遗鲁君，陈女乐文马于鲁城南高门外。</span>（好：美。八十人：似应作“二八”，即二<a href="#yi4l">佾</a>。<a id="wei4"></a>遗（<span class="lypinyin">wèi</span>）：赠送。）<a href="#jihuanzi">季桓子</a>先去替定公鉴赏了一番，又劝定公亲自观摩，最终收下了这些诱人的礼物。于是国政荒废，次年春的郊祭也敷衍了事，孔子无奈<a href="#13.9">去了卫国</a>。后来，<span class="lyq">桓子<a href="#kui4">喟</a>然叹曰：“夫子罪我以群婢故也夫！”</span>定公耽于女乐时可不知道，他的日子只剩下3年了。</p></li>
 <li><p><a id="jihuanzi"></a><span class="lyterm">季桓子</span>：季孙斯（？—前492年），<a href="#jishi">季孙氏</a>第5代宗主，谥号是桓（“壮以有力曰桓”），时任鲁国正卿。<a href="#jikangzi">季康子</a>是他的儿子，<a href="#yanghuo">阳货</a>曾任他的管家。</p></li>
 </ul>
 <p><span class="lyseealso"><span>【参】</span><span>《韩非子·十过》中第六过是<span class="lyq">耽于女乐，不顾国政</span>，所举史事与本章相似。<a href="#yidihuaxia">西戎</a>绵诸王听说邻国<a id="qinmugong"></a>秦穆公（前659年—前621年在位，春秋五霸之一）贤能，就派大臣由余出访。穆公问：<span class="lyq">古之明主得国、失国何常以？</span>由余对以<span class="lyq">常以俭得之，以奢失之</span>，并历数<a href="#yao">尧</a>、<a href="#shun">舜</a>、<a href="#yu">禹</a>、<a href="#shangchao">殷</a>之成败。穆公赞叹之余，<span class="lyq">召内史廖而告之曰：“寡人闻邻国有圣人，敌国之忧也。今由余，圣人也，寡人患之，吾将奈何？”内史廖曰：“臣闻戎王之居，僻陋而道远，未闻中国之声。君其遗之女乐，以乱其政，而后为由余请期，以疏其谏。彼君臣有间，而后可图也。”君曰：“诺。”乃使史廖以女乐二八遗戎王，因为由余请期。戎王许诺，见其女乐而说之，设酒张饮，日以听乐，终岁不迁，牛马半死。由余归，因谏戎王。戎王弗听，由余遂去之秦。秦穆公迎而拜之上卿，问其兵势与其地形。既以得之，举兵而伐之，兼国十二，开地千里。</span>（请期：指请求延长出访时间。<a href="#jian4b">间</a>：隔阂，嫌隙。不迁：指不按游牧需要，移居到水草丰盛之地。）戎人民风朴实，入彀还情有可原，鲁国集周代礼乐之<a href="#jizhaguanyue">大观</a>，却有如此丑态，难怪孔子失望透顶了。亦见《吕氏春秋·不苟论·不苟》、《史记·秦本纪》等。</span></span></p>
